index and fix search bug

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -18,7 +18,7 @@ body
 	//padding-left:10%;
 	//padding-right:10%;
     //padding-top: 60px;
-  background-color: #eeeeee;
+  //background-color: #eeeeee;
 }	
 a:hover{
 text-decoration:none;
