--- a/app/views/courses/_schd_search_bar.html.erb
+++ b/app/views/courses/_schd_search_bar.html.erb
@@ -50,8 +50,8 @@
 				<div class="input-group-btn">
 					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="search_action">課名 <span class="caret"></span></button>
 					<ul class="dropdown-menu">
-						<li><a href="#" onclick="change_search_type($(this))" id="course_name">課名</a></li>
-						<li><a href="#" onclick="change_search_type($(this))" id="course_time">時間</a></li>
+						<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="course_name">課名</a></li>
+						<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="course_time">時間</a></li>
 						<!--<li><a href="#" onclick="change_action($(this))" id="course_teacher">老師</a></li>-->
 					</ul>
 				</div><!-- /btn-group -->
