--- a/app/views/courses/_show_infos.html.erb
+++ b/app/views/courses/_show_infos.html.erb
@@ -34,7 +34,7 @@ function rate_course(ctr_id,score){
 
 </script>
 
-<div class="row col-sm-offset-1">
+<div class="row ">
 
 <% rating_cold_arr =[]%>
 <% rating_sweety_arr =[]%>
