--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,20 @@
-﻿
+﻿<div class="row" style="background-color:black; ">
+<p style="font-size:72px;font-weight:900 !important;color:white !important;">NCTU+</p>
+<p style="font-size:48px;font-weight:900 !important;color:white !important; margin-left:100px;">
+共
+<%=number_with_delimiter(@course_detail_count)%> 門課
+<%=number_with_delimiter(@review_count)%> 篇心得
+<%=number_with_delimiter(@file_count)%> 個檔案
+<%=number_with_delimiter(@user_count)%> 位註冊
+</p>
+<p style="font-size:36px;font-weight:900 !important;color:white !important;">
+
+教授比一比－課程也有三圍!?爽課、好課、雷課一目暸然!
+<br>
+修課心得－
+<br>
+考古題系統－
+<br>
+預排課表－
+</p>
+</div>
