--- a/app/views/courses/course_lists.html.erb
+++ b/app/views/courses/course_lists.html.erb
@@ -7,16 +7,16 @@
 
 <tr>
 <th class="col-md-1">評價
-<%= select_tag("sort_by", options_for_select([['綜合','all'],['涼度','cold'],['甜度','sweety'],['硬度','hardness']]),  :style=>"height :25px;width:60px; ", :onchange=>"reorder($(this))") %>
+<% select_tag("sort_by", options_for_select([['綜合','all'],['涼度','cold'],['甜度','sweety'],['硬度','hardness']]),  :style=>"height :25px;width:60px; ", :onchange=>"reorder($(this))") %>
 </th>
 <th class="col-md-2">系所</th>
 <!--<th>永久課號</th>-->
-<th>摘要</th>
+<th class="col-md-1">摘要</th>
 <th class="col-md-2">課名</th>
 <th class="col-md-1">老師</th>
 <th class="col-md-3">簡介</th>
-<th class="col-md-2">時間</th>
-<th class="col-md-2">學分</th>
+<th class="col-md-1">時間</th>
+<th class="col-md-1">學分</th>
 
 </tr>
 
@@ -46,7 +46,7 @@
 					<td><%= link_to course.ch_name, course_path(course) %></td>
 					<td><%= cd.course_teachership.teacher.name %></td>
 					<td><%= cd.memo %></td>
-					<td><%= cd.time_and_room.partition("-")[0] %></td>
+					<td><%= cd.time %></td>
 					<td><%= cd.credit %></td>
 				</tr>
 		<% end %>
