--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,9 +1,6 @@
 
 
-<script>
 
-$("#search_result").load("/courses/list_all_courses?page=1");
-</script>
 
 <%= render :partial=>"search_js" %>
 
@@ -27,8 +24,8 @@ $("#search_result").load("/courses/list_all_courses?page=1");
 				<!--<span class="input-group-addon">
 					<input type="checkbox" id="semester_check">
 				</span>-->
-				<input type="text" class="form-control" id="semester_select" placeholder="選擇學期..." >
-	      <input type="hidden" id="semester_id" value="<%=Semester.all.last.id%>" >
+				<input type="text" class="form-control" id="semester_select" placeholder="選擇學期..." value="<%=latest_semester.name%>">
+				<input type="hidden" id="semester_id" value="<%=Semester.all.last.id%>" >
 				<div class="input-group-btn">
 					<button type="button" class="btn btn-default " id="semester" onclick="select_thing('semester')">
 						<span class="caret"></span>
@@ -73,36 +70,39 @@ $("#search_result").load("/courses/list_all_courses?page=1");
 				<div class="input-group-btn">
 					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="search_action">課名 <span class="caret"></span></button>
 					<ul class="dropdown-menu">
-						<li><a href="#" onclick="change_search_type($(this))" id="course_name">課名</a></li>
-						<li><a href="#" onclick="change_search_type($(this))" id="course_time">時間</a></li>
+						<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="course_name">課名</a></li>
+						<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="course_time">時間</a></li>
 						
 						<!--<li><a href="#" onclick="change_action($(this))" id="course_teacher">老師</a></li>-->
 					</ul>
 				</div><!-- /btn-group -->
 				<input type="hidden" id="search_type" value="course_name">
 				<input type="text" class="form-control" id="search_term" placeholder="Search..." >
-				<div id="escape_search_term" class="hidden"></div>
+				
 				<span class="input-group-btn"><!--type="submit"-->
 					<button class="btn btn-default" onclick="search_keyword()"><span class="glyphicon glyphicon-search"></span></button>
 				</span>
-				<button class="btn btn-primary btn-circle" onclick="show_tip()">
-				<span class="glyphicon glyphicon-question-sign "></span>
-				</button>
+
 			</div><!-- /input-group -->
 		</div>
-
+		<div class="col-md-1">
+		<span class="glyphicon glyphicon-question-sign clickable-hover text-right" style="color:green !important; "onclick="show_tip()"></span>
+		</div>
 	</div><!-- /row -->
 	
 	
 </div>
 
-<div class="row hidden col-md-offset-1" id="search_tips">
-	<div id="" class=" bs-callout bs-callout-info ">
+<div class="row hidden " id="search_tips">
+	<div id="" class="col-md-10 col-md-offset-1">
+	<div class="bs-callout bs-callout-info ">
 		<!--<h4></h4>-->
 		<p>快速鍵: 選擇類別-[U]ndergraduate:大學部 [G]raduate:研究所 [C]ommon:通識 [D]epartment:系所 [/]:關鍵字</p>
 		<p>時間大小寫皆可 若要搜尋多個時間請用空白區隔 如:1cd 5g </p>
 	</div>
+	</div>
 </div>
 
 <div id="search_result" class="row bg-white-transparent">
+
 </div>
