add_semester done

--- a/app/views/courses/_schd_search_bar.html.erb
+++ b/app/views/courses/_schd_search_bar.html.erb
@@ -14,7 +14,7 @@
 
 <div class="form-horizotal"  ><!--role="form"-->
 	<div class="row schedule-search-bar" >
-		<input type="hidden" id="semester_id" value="<%=Semester.last.id%>" >
+		<input type="hidden" id="semester_id" value="<%=@sem_id%>" >
 		<div class="form-group">
 			<div class="input-group">
 				<input type="text" class="form-control" id="degree_select" placeholder="大學部/研究所/通識" ><!--readonly-->
