--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "courses", "data-turbolinks-track" => true %>
+
 <h1><%= @course.ch_name %>(<%= @course.eng_name %>)</h1>
 
 <ul class="nav nav-tabs">
