--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,13 +1,4 @@
-.starRate {position:relative; overflow:hidden; zoom:1;}
-.starRate ul {width:160px; margin:0; padding:0;}
-.starRate li {display:inline; list-style:none;}
-.starRate a, .starRate b {background:url(star_rate.gif) left top repeat-x;}
-.starRate a {float:right; margin:0 40px 0 -144px; width:80px; height:16px; background-position:left 16px; color:#000; text-decoration:none;}
-.starRate a:hover {background-position:left -32px;}
-.starRate b {position:absolute; z-index:-1; width:80px; height:16px; background-position:left -16px;}
-.starRate div b {left:0px; bottom:0px; background-position:left top;}
-.starRate a span {position:absolute; left:-300px;}
-.starRate a:hover span {left:90px; width:100%;}
+
 
 body
 {	
@@ -20,22 +11,10 @@ body
     //padding-top: 60px;
   //background-color: #eeeeee;
 }	
-a:hover{
+/*a:hover{
 text-decoration:none;
-}
-.sidebar{
-	//padding-top:200px;
-	//max-width:250px;
-}
-.maincontent{
-  //width :800px;
-  //position :relative;
-  //left :500px;
-  //top : 100px;
-}
-.searchstyle{
-  width :400px;
-}
+}*/
+
 
 .user-reg {
     width: 280px !important;
