--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -86,7 +86,7 @@
 			</div><!-- /input-group -->
 		</div>
 		<div class="col-md-1">
-		<span class="glyphicon glyphicon-question-sign clickable-hover text-right" style="color:green !important; "onclick="show_tip()"></span>
+		<span class="glyphicon glyphicon-question-sign clickable-hover text-right" style="color:green !important; "onclick="show_tip('search_tips')"></span>
 		</div>
 	</div><!-- /row -->
 	
@@ -102,7 +102,7 @@
 	</div>
 	</div>
 </div>
-
+<br>
 <div id="search_result" class="row bg-white-transparent">
 
 </div>
