--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -8,20 +8,52 @@
 		<li id="sem_<%=s.id%>"  class="sem_tab"><a href="javascript:void(0);" onclick="change_sem(<%=s.id%>);"><%=s.name%></a></li>
 	<% end %>
 	<li class="" id="add_sem"><a href="javascript:void(0);" onclick="show_add_form()">新增學期</a></li>
-	<li class="" id="statics"><a href="javascript:void(0);" onclick="">統計</a></li>
+	<li class="" id="show_statics"><a href="javascript:void(0);" onclick="show_statics()">統計</a></li>
+	<span class="glyphicon glyphicon-question-sign clickable-hover pull-right" style="color:green !important; "onclick="show_tip('simulation_tips')"></span>
 </ul>
+
+<div class="row hidden " id="simulation_tips">
+	<div class="col-md-12 ">
+	<div class="bs-callout bs-callout-info ">
+		123123123123
+	</div>
+	</div>
+</div>
+
 <div id="srch_and_schd">
 </div>
 <br>
 
+<div class="row " id="add_sem_form">
+	<div class="form-inline col-md-offset-5">
+		<div class="form-group">
+			<% sems=Semester.where("id not in (?)",@user_sem_ids).reverse %>
+			<%= select_tag(:sem_id, options_from_collection_for_select(sems,:id,:name), :class=>"form-control") %>		
+		</div>
+		<button class="btn btn-primary" onclick="add_semester()">新增</button>
+	</div>
+</div>
+
 <script>
+function show_statics(){
+	$("#sem_selector .active").removeClass("active");
+	$("#show_statics").addClass("active");
+	$("#add_sem_form").hide();
+	
+	$("#srch_and_schd").show();
+	$("#srch_and_schd").load("/courses/get_user_statics");
+	
+}
 function add_semester(){
 	$("#sem_selector .active").removeClass("active");
 	var select =$("#sem_id");
+	
 	$("#add_sem_form").hide(); 
 	$("#sem_selector .sem_tab:last").after('<li class="sem_tab" id="sem_'+select.val()+'"><a href="javascript:void(0);" onclick="change_sem('+select.val()+')">'+select.find('option:selected').text()+'</a></li>');
 	
 	change_sem(select.val());
+	select.find('option:selected').remove();
+
 }
 
 $(document).ready(function(){
@@ -31,10 +63,13 @@ $(document).ready(function(){
 
 function change_sem(id){
 	//alert("!!!");
+	$("#add_sem_form").hide();
+	$("#srch_and_schd").show();
+	$("#srch_and_schd").html('<%=loading_img%>');
 	$("#srch_and_schd").load("/courses/get_user_simulated?sem_id="+id);
 	$("#sem_selector .active").removeClass("active");
 	$("#sem_"+id).addClass("active");
-	$("#add_sem_form").hide();
+	
 }
 function show_add_form(){
 	//$("#add_sem_form").removeClass("hidden");
@@ -43,7 +78,7 @@ function show_add_form(){
 	$("#sem_selector .active").removeClass("active");
 	$("#add_sem").addClass("active");
 	
-	$("#srch_and_schd").load("/courses/get_sem_form");
-	
+	//$("#srch_and_schd").load("/courses/get_sem_form");
+	$("#srch_and_schd").hide();
 }
 </script>
