--- a/app/assets/stylesheets/course.css.scss
+++ b/app/assets/stylesheets/course.css.scss
@@ -124,4 +124,20 @@
 	#border-color:#428bca !important;
 }
 
-
+.common-tag{
+	background-color:#eeeeee;
+	padding-top : 2px;
+	padding-bottom: 2px;
+	padding-left : 3px;
+	padding-right : 3px;
+	//min-width:700px;
+	//height:30px;
+	text-align:center;
+	
+	border-style:solid;
+	border-width:3;
+	border-color:#ffffff;
+	min-height:24px;
+	min-width:30px ;
+	display: inline-block;
+}
