--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,7 +2,123 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.code-toolbar {
-  background-color:black;
-  text-align:right;
+
+.carousel-control {
+  //margin-top:25%;
+	//margin-top:500px;
+  width:auto;
+  height:1em;
+  background:transparent;
+}
+
+p.function-desc{
+	font-size:24px;
+	font-weight:bold;
+	color:white;
+}
+
+.icon-container{
+	width:150px;
+	display:inline-block;
+	margin-right:30px;
+}
+.row-margin{
+	margin-right:-15px;
+}
+.circle {
+	border-radius: 10%;
+	width: 150px;
+	height: 150px;
+	background-color:rgba(255,255,255, 0.5);
+	padding-top:40px;
+	//padding-left:40px;
+	text-align:center;
+	display :inline-block;
+	//border-style: solid;
+  //border-width: 5px;
+	//border-color:rgba(255,255,255, 0.5);
+}
+
+.circle:hover{
+	//border-radius: 50%;
+	//width: 120px;
+	//height: 120px;
+	background-color:rgba(0,0,0, 0.5);
+	/* width and height can be anything, as long as they're equal */
+}
+
+.index-grid{
+	height : 50px;
+	background-color:yellow;
+	border :solid;
+}
+
+/*  bhoechie tab */
+div.bhoechie-tab-container{
+  z-index: 10;
+  background-color: #ffffff;
+  padding: 0 !important;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  border:1px solid #ddd;
+  margin-top: 20px;
+  margin-left: 50px;
+  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  -moz-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  background-clip: padding-box;
+  opacity: 0.97;
+  filter: alpha(opacity=97);
+}
+div.bhoechie-tab-menu{
+  padding-right: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+}
+div.bhoechie-tab-menu div.list-group{
+  margin-bottom: 0;
+}
+div.bhoechie-tab-menu div.list-group>a{
+  margin-bottom: 0;
+}
+div.bhoechie-tab-menu div.list-group>a .glyphicon,
+div.bhoechie-tab-menu div.list-group>a .fa {
+  color: #5A55A3;
+}
+div.bhoechie-tab-menu div.list-group>a:first-child{
+  border-top-right-radius: 0;
+  -moz-border-top-right-radius: 0;
+}
+div.bhoechie-tab-menu div.list-group>a:last-child{
+  border-bottom-right-radius: 0;
+  -moz-border-bottom-right-radius: 0;
+}
+div.bhoechie-tab-menu div.list-group>a.active,
+div.bhoechie-tab-menu div.list-group>a.active .glyphicon,
+div.bhoechie-tab-menu div.list-group>a.active .fa{
+  background-color: #5A55A3;
+  background-image: #5A55A3;
+  color: #ffffff;
+}
+div.bhoechie-tab-menu div.list-group>a.active:after{
+  content: '';
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  margin-top: -13px;
+  border-left: 0;
+  border-bottom: 13px solid transparent;
+  border-top: 13px solid transparent;
+  border-left: 10px solid #5A55A3;
+}
+
+div.bhoechie-tab-content{
+  background-color: #ffffff;
+  /* border: 1px solid #eeeeee; */
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
+div.bhoechie-tab div.bhoechie-tab-content:not(.active){
+  display: none;
 }
