--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -92,6 +92,41 @@
 	
 	
 </div>
+<% if current_user %>
+<script>
+	$(document).ready(function(){
+		$("#schd_but").hover(
+			function(){
+				$("#schd_modal").modal('show');
+				$("#user_schedule").load("/courses/get_user_courses?sem_id=<%=latest_semester.id%>&type=schd");
+			}
+		);
+	});
+
+</script>
+<div id="schd_but" class="container" style="color:white;padding-top:8px;padding-bottom:8px;position:fixed;z-index:100;left:20px;margin-top:10%;background-color:rgba(0,0,0,0.5);/*width:50px;height:50px;*/">
+<%= fa_icon("list-alt 3x ") %>
+</div>
+
+
+<div class="modal fade" id="schd_modal" tabindex="-1" role="dialog" aria-labelledby="purchaseLabel" aria-hidden="true" >
+	<div class="modal-dialog" >
+		<div class="modal-content" >
+			<!--<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="purchaseLabel">Purchase</h4>
+			</div>-->
+			<div class="modal-body" id="user_schedule"></div>
+			<!--<div class="modal-footer">
+				
+				<button type="button" class="btn btn-primary">Purchase</button>
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			</div>-->
+		</div>
+	</div>
+</div>
+
+<% end %>
 
 <div class="row hidden " id="search_tips">
 	<div id="" class="col-md-10 col-md-offset-1">
