--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="onPageLoad();">
-<%= image_tag("bg.jpg", :id=>'bg1', :class=>"bg")%>
+<%= image_tag("head_1.jpg", :id=>'bg1', :class=>"bg")%>
 
 <!--
 <div id="user-widget">
