--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -46,8 +46,8 @@ background-color: black  ;
 } 
  
 .global-background-color{  
-	background-color: white  ; 
-	opacity:0.85;
+	background-color: rgba(255,255,255,0.4); 
+	//opacity :0.75
 }
 
 .background-color-ptt{
