--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -133,7 +133,7 @@
 	<div class="bs-callout bs-callout-info ">
 		<!--<h4></h4>-->
 		<p>快速鍵: 選擇類別-[U]ndergraduate:大學部 [G]raduate:研究所 [C]ommon:通識 [D]epartment:系所 [/]:關鍵字</p>
-		<p>時間大小寫皆可 若要搜尋多個時間請用空白區隔 如:1cd 5g </p>
+		<p>搜尋規則: 1CD 5G=>找含有1CD與5G時段的課程(OR) 1CD5G=>找1CD5G的課程(AND) </p>
 	</div>
 	</div>
 </div>
